// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DayOfWeekNames matches snapshot matches when header is not sticky 1`] = `
<div class="weekday">
  <p tabindex="0" class="weekday__names">
    Mon
  </p>
  <p tabindex="0" class="weekday__names">
    Tues
  </p>
  <p tabindex="0" class="weekday__names">
    Wed
  </p>
  <p tabindex="0" class="weekday__names">
    Thu
  </p>
  <p tabindex="0" class="weekday__names">
    Fri
  </p>
  <p tabindex="0" class="weekday__names">
    Sat
  </p>
  <p tabindex="0" class="weekday__names">
    Sun
  </p>
</div>
`;

exports[`DayOfWeekNames matches snapshot matches when header is sticky 1`] = `
<div class="weekday sticky">
  <p tabindex="0" class="weekday__names">
    Mon
  </p>
  <p tabindex="0" class="weekday__names">
    Tues
  </p>
  <p tabindex="0" class="weekday__names">
    Wed
  </p>
  <p tabindex="0" class="weekday__names">
    Thu
  </p>
  <p tabindex="0" class="weekday__names">
    Fri
  </p>
  <p tabindex="0" class="weekday__names">
    Sat
  </p>
  <p tabindex="0" class="weekday__names">
    Sun
  </p>
</div>
`;
